@@ -2315,6 +2315,20 @@ Default MQTT protocol version to use, defaults to 3.1.1.
 Topic to use when publishing RRR messages without topic set in them.
 If left unspecified, RRR messages without a topic will be dropped.
 
+.It mqtt_will_topic=TOPIC
+If set, a will topic will be set as MQTT client connects to the broker.
+A PUBLISH message will be generated by the broker if the client unexpectedly disconnects.
+Other will-related parameters require this parameter to be set.
+
+.It mqtt_will_message=STRING
+If set, any generated will message will have the given string as message body.
+
+.It mqtt_will_qos={0|1|2}
+Default Quality of Service to use for will message, defaults to 1.
+
+.It mqtt_will_retain={yes|no}
+If given and set to yes, the retain flag will be set for will messages.
+
 .It mqtt_publish_topic_force={yes|no}
 Force use of the topic specified in
 .B mqtt_publish_topic
