@@ -93,7 +93,11 @@ int rrr_mqtt_client_connect (
 		uint8_t clean_start,
 		const char *username,
 		const char *password,
-		const struct rrr_mqtt_property_collection *connect_properties
+		const struct rrr_mqtt_property_collection *connect_properties,
+		const char *will_topic,
+		const struct rrr_nullsafe_str *will_message,
+		uint8_t will_qos,
+		uint8_t will_retain
 );
 int rrr_mqtt_client_start (
 		struct rrr_mqtt_client_data *data,
