@@ -338,6 +338,11 @@ struct rrr_mqtt_p_connect {
 #define RRR_MQTT_P_CONNECT_GET_FLAG_PASSWORD(p)         (((1<<6) &            ((struct rrr_mqtt_p_connect *)(p))->connect_flags) >> 6)
 #define RRR_MQTT_P_CONNECT_GET_FLAG_USER_NAME(p)        (((1<<7) &            ((struct rrr_mqtt_p_connect *)(p))->connect_flags) >> 7)
 
+#define RRR_MQTT_P_CONNECT_SET_FLAG_CLEAN_START(p)      (((struct rrr_mqtt_p_connect *)(p))->connect_flags|=(1<<1))
+#define RRR_MQTT_P_CONNECT_SET_FLAG_WILL(p)             (((struct rrr_mqtt_p_connect *)(p))->connect_flags|=(1<<2))
+#define RRR_MQTT_P_CONNECT_SET_FLAG_WILL_QOS(p,qos) \
+	((struct rrr_mqtt_p_connect *) p)->connect_flags = (((struct rrr_mqtt_p_connect *) p)->connect_flags & ~((1<<4)|(1<<3))) | ((uint8_t) ((qos & 3) << 3))
+#define RRR_MQTT_P_CONNECT_SET_FLAG_WILL_RETAIN(p)      (((struct rrr_mqtt_p_connect *)(p))->connect_flags|=(1<<5))
 #define RRR_MQTT_P_CONNECT_SET_FLAG_PASSWORD(p)         (((struct rrr_mqtt_p_connect *)(p))->connect_flags|=(1<<6))
 #define RRR_MQTT_P_CONNECT_SET_FLAG_USER_NAME(p)        (((struct rrr_mqtt_p_connect *)(p))->connect_flags|=(1<<7))
 
