@@ -40,6 +40,10 @@ mqtt_client_identifier=client_2
 mqtt_command_topic_filter=client2/command
 mqtt_server=localhost
 mqtt_server_port=1884
+mqtt_will_topic=client2/will
+mqtt_will_message=will message
+mqtt_will_qos=1
+mqtt_will_retain=1
 
 [instance_mqttclient_3]
 module=mqttclient
@@ -50,3 +54,6 @@ mqtt_client_identifier=client_3
 mqtt_command_topic_filter=client3/command
 mqtt_server=localhost
 mqtt_server_port=1884
+mqtt_will_topic=client3/will
+mqtt_will_message=will message
+mqtt_will_qos=1
